attempt to stop horizontal scroll part 2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,8 @@ body {
 body, html {
   overflow-x: hidden;
   position: relative;
-  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 header {
